# object-detection

./: README.md  object-detection.cabal
app/: Main.hs
