cabal-version:      2.4
name:               object-detection
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Andrew Berisha-Cornejo
maintainer:         github@brrgrl.mozmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable object-detection
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , scotty
                    , http-types
                    , time
                    , containers
                    , text
                    , stm
                    , lucid
    hs-source-dirs:   app
    default-language: Haskell2010
